driven*; updated index.html

--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <html>
-
 <head>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <script src="scripts/game.js"></script>
     <script src="scripts/winner_checker.js"></script>
+    <script src="scripts/history.js"></script>
+    <script src="scripts/game.js"></script>
+
 </head>
-
 <body>
+    <div class="header">
 
-
-    <b>Teraz tura:</b>
-    <div id="userTurn" onclick="game.changePlayerTurn()">O</div>
-
-    <center>
-        <div id="resultBoard">
-            <div class="boardPart">
-                <b>X </b>
-                <div class="result" id="winsOfX">0</div>
-            </div>
-            <div class="boardPart">
-                <b>O</b>
-                <div class="result" id="winsOfO">0</div>
-            </div>
-            </br class="clearBoth">
-            <button onclick="game.resetGame();winner_checker.resetChecker()">reset</button>
-        </div>
-    </center>
-    </br class="clearBoth">
-
-
-
-
-    <div class="board">
-        <div class="field" id="cell1" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('1')))"></div>
-        <div class="field" id="cell2" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('2')))"></div>
-        <div class="field" id="cell3" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('3')))"></div>
-        <div style="clear: both"></div>
-        <div class="field" id="cell4" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('4')))"></div>
-        <div class="field" id="cell5" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('5')))"></div>
-        <div class="field" id="cell6" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('6')))"></div>
-        <div style="clear: both"></div>
-        <div class="field" id="cell7" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('7')))"></div>
-        <div class="field" id="cell8" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('8')))"></div>
-        <div class="field" id="cell9" onclick="game.addWinner(winner_checker.checkForWinner(game.insertSymbolIntoDiv('9')))"></div>
-        <div style="clear: both"></div>
     </div>
+    <div class="container">
+        <b>Teraz tura:</b>
+        <div id="userTurn" onclick="game.changePlayerTurn()">O</div>
 
+        <center>
+            <div id="resultBoard">
+                <div class="boardPart">
+                    <b>X </b>
+                    <div class="result" id="winsOfX">0</div>
+                </div>
+                <div class="boardPart">
+                    <b>O</b>
+                    <div class="result" id="winsOfO">0</div>
+                </div>
+                <div class="draws">
+                    <b>DRAWS</b>
+                    <div class="result" id="draws">0</div>
+                </div>
 
+                </br class="clearBoth">
+                <button onclick="game.resetGame()">reset</button>
+            </div>
+        </center>
+        </br class="clearBoth">
 
-
+        <div class="board">
+            <div class="field" id="cell1" onclick="game.perform('1')"></div>
+            <div class="field" id="cell2" onclick="game.perform('2')"></div>
+            <div class="field" id="cell3" onclick="game.perform('3')"></div>
+            <div style="clear: both"></div>
+            <div class="field" id="cell4" onclick="game.perform('4')"></div>
+            <div class="field" id="cell5" onclick="game.perform('5')"></div>
+            <div class="field" id="cell6" onclick="game.perform('6')"></div>
+            <div style="clear: both"></div>
+            <div class="field" id="cell7" onclick="game.perform('7')"></div>
+            <div class="field" id="cell8" onclick="game.perform('8')"></div>
+            <div class="field" id="cell9" onclick="game.perform('9')"></div>
+            <div style="clear: both"></div>
+        </div>
+    </div>
 </body>
-
 </html>
