--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <div class="field" id="cell1" onclick="game.perform('1')"></div>
             <div class="field" id="cell2" onclick="game.perform('2')"></div>
             <div class="field" id="cell3" onclick="game.perform('3')"></div>
-            <div style="clear: both"></div>
+            <div class="clearBoth"></div>
             <div class="field" id="cell4" onclick="game.perform('4')"></div>
             <div class="field" id="cell5" onclick="game.perform('5')"></div>
             <div class="field" id="cell6" onclick="game.perform('6')"></div>
-            <div style="clear: both"></div>
+            <div class="clearBoth"></div>
             <div class="field" id="cell7" onclick="game.perform('7')"></div>
             <div class="field" id="cell8" onclick="game.perform('8')"></div>
             <div class="field" id="cell9" onclick="game.perform('9')"></div>
-            <div style="clear: both"></div>
+            <div class="clearBoth"></div>
         </div>
     </div>
 </body>
