--- a/src/index.html
+++ b/src/index.html
@@ -1,55 +1,60 @@
 <html>
+
 <head>
-	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/segment7" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <script src="scripts/winner_checker.js"></script>
-    <script src="scripts/history.js"></script>
-    <script src="scripts/game.js"></script>
-    <script src="scripts/presenter.js"></script>
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/segment7" type="text/css" />
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script src="scripts/winner_checker.js"></script>
+	<script src="scripts/history.js"></script>
+	<script src="scripts/game.js"></script>
+	<script src="scripts/presenter.js"></script>
 </head>
 
 <body>
-    <div class="container">
-      
-	  
-	  <div id="controlPanel">
-		  <div id="leftCP">NOW<br>
-		  <div id="userTurn" onclick="presenter.changeTurn(game)">O</div>
-			<button onclick="presenter.reset(game)">reset</button>
-		  </div>
-		  <div id="rightCP">
-		  			  <div class="symbolResult">
-				  <b>X</b>
-				  <div class="result" id="winsOfX">0</div>
-			  </div>
-			  <div class="symbolResult" id="drawsContainer">
-				  <b>DRAWS</b>
-				  <div class="result" id="draws">0</div>
-			  </div>
-			  <div class="symbolResult">
-				  <b>O</b>
-				  <div class="result" id="winsOfO">0</div>
-			  </div>
+	<div class="container">
 
-		  </div>
-	  </div>
-	  
-	  <br class="clearBoth">
-        <div class="board">
-            <div class="field" id="cell1" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '1')"></div>
-            <div class="field" id="cell2" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '2')"></div>
-            <div class="field" id="cell3" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '3')"></div>
-            <div class="clearBoth"></div>
-            <div class="field" id="cell4" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '4')"></div>
-            <div class="field" id="cell5" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '5')"></div>
-            <div class="field" id="cell6" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '6')"></div>
-            <div class="clearBoth"></div>
-            <div class="field" id="cell7" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '7')"></div>
-            <div class="field" id="cell8" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '8')"></div>
-            <div class="field" id="cell9" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '9')"></div>
-            <div class="clearBoth"></div>
-        </div>
-    </div>
+
+		<div id="controlPanel">
+			<div class="leftCP">START<br>
+				<div class="userDisplay" id="startUser">O</div>
+				<button onclick="presenter.changeTurn(game)">change</button>
+			</div>
+			<div class="leftCP" id="middleLeftCP">NOW<br>
+				<div class="userDisplay" id="userTurn">O</div>
+				<button onclick="presenter.reset(game)">reset</button>
+			</div>
+			<div id="rightCP">
+				<div class="symbolResult">
+					<b>X</b>
+					<div class="result" id="winsOfX">0</div>
+				</div>
+				<div class="symbolResult" id="drawsContainer">
+					<b>DRAWS</b>
+					<div class="result" id="draws">0</div>
+				</div>
+				<div class="symbolResult">
+					<b>O</b>
+					<div class="result" id="winsOfO">0</div>
+				</div>
+
+			</div>
+		</div>
+
+		<br class="clearBoth">
+		<div class="board">
+			<div class="field" id="cell1" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '1')"></div>
+			<div class="field" id="cell2" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '2')"></div>
+			<div class="field" id="cell3" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '3')"></div>
+			<div class="clearBoth"></div>
+			<div class="field" id="cell4" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '4')"></div>
+			<div class="field" id="cell5" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '5')"></div>
+			<div class="field" id="cell6" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '6')"></div>
+			<div class="clearBoth"></div>
+			<div class="field" id="cell7" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '7')"></div>
+			<div class="field" id="cell8" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '8')"></div>
+			<div class="field" id="cell9" onclick="presenter.insertSymbol(game,winner_checker,historyModule, '9')"></div>
+			<div class="clearBoth"></div>
+		</div>
+	</div>
 </body>
 
 </html>
